<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".view.activity.DeleteAccountActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/delete_account_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/menu_delete_account"
        android:backgroundTint="@color/white"
        app:titleTextColor="@color/black"
        android:outlineAmbientShadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        android:elevation="1dp"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/delete_account_logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/description_favorite_recipes_without_content_logo"
            android:src="@drawable/ic_baseline_sentiment_very_dissatisfied_24" />

        <TextView
            android:id="@+id/home_txt_without_content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:fontFamily="@font/comfortaa_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/txt_really_want_delete_account"
            android:textColor="@color/light_grey"
            android:textSize="25sp" />

        <com.ddm.veggie.view.components.VeggieButton
            android:id="@+id/delete_account_vb_delete"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/btn_delete" />
    </LinearLayout>
</FrameLayout>