<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin"
    android:background="@color/theme_green_100"
    android:gravity="center"
    tools:context=".view.activity.SignUpActivity">

    <EditText
        android:id="@+id/sign_in_ed_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_text_view"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/sign_in_et_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_text_view"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_btn_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sign_in_btn_enter"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginBottom="5dp"
        android:text="@string/enter"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_line_sign_up_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/sign_in_line_sign_up_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/sign_in_txt_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/havent_account" />

        <TextView
            android:id="@+id/sign_in_txt_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/sign_up"
            android:textColor="@color/theme_purple_500" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>