<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".view.activity.ChangeNameActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/change_name_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/menu_change_name"
        android:backgroundTint="@color/white"
        app:titleTextColor="@color/black"
        android:outlineAmbientShadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        android:elevation="1dp"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin">

        <com.ddm.veggie.view.components.VeggieEditText
            android:id="@+id/change_name_vet_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="2dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/hint_change_name"
            android:includeFontPadding="false"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/change_name_tv_name_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:text=""
            android:textColor="@color/theme_red_wrong"
            android:textSize="12sp" />

        <com.ddm.veggie.view.components.VeggieButton
            android:id="@+id/change_name_vb_save"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:fontFamily="@font/comfortaa_bold"
            android:includeFontPadding="false"
            android:text="@string/btn_save" />
    </LinearLayout>
</FrameLayout>