<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.fragment.RecipesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recipes_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/recipes_ed_search"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_text_view"
            android:fontFamily="@font/poppins"
            android:hint="@string/search_hint"
            android:includeFontPadding="false"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:paddingStart="10dp"
            android:paddingEnd="60dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/recipes_btn_search"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="-48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_search_description"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recipes_ed_search"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/recipes_txt_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/comfortaa_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/txt_filter"
            android:textColor="@color/theme_purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipes_ed_search" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipes_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipes_txt_filter">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>