<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".view.activity.RecipeActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/recipe_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:backgroundTint="@color/white"
        app:titleTextColor="@color/black"
        android:outlineAmbientShadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        android:elevation="1dp"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_below="@id/recipe_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="@dimen/activity_vertical_margin">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <ProgressBar
                    android:id="@+id/recipe_p_image_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <ImageView
                    android:id="@+id/recipe_iv_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_image_view"
                    android:contentDescription="@string/recipe_image_description"
                    android:scaleType="centerCrop" />

            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/recipe_tv_favorite_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text=""
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/recipe_bt_favorite"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/shape_round_button"
                    android:contentDescription="@string/button_open_recipe_description"
                    android:src="@drawable/ic_baseline_white_star_outline_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:fontFamily="@font/comfortaa_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/txt_recipe_description"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/recipe_tv_description_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:includeFontPadding="false"
                android:text=""
                android:textSize="18sp" />
        </LinearLayout>
        </ScrollView>

</RelativeLayout>